MDEV-37263 Hang or crash when shrinking innodb_buffer_pool_size

buf_pool_t::shrink(): If we run out of pages to evict from buf_pool.LRU,
abort the operation. Also, do not leak the spare block that we may have
allocated.